k8s/auth-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres
  namespace: default
  labels:
    app: auth-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: auth-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: auth-postgres
      app: auth-postgres
  template:
    metadata:
      labels:
        service: auth-postgres
        app: auth-postgres
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: auth-postgres
      containers:
        - name: auth-postgres
          image: postgres
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/auth/data"
              name: "authdata"
      volumes:
        - name: authdata
          emptyDir: {}
