k8s/measurements-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: measurements-postgres
  namespace: default
  labels:
    app: measurements-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: measurements-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: measurements-postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: measurements-postgres
      app: measurements-postgres
  template:
    metadata:
      labels:
        service: measurements-postgres
        app: measurements-postgres
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: measurements-postgres
      containers:
        - name: measurements-postgres
          image: postgres
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/measurements/data"
              name: "measurementsdata"
      volumes:
        - name: measurementsdata
          emptyDir: {}
