k8s/measurements.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: measurements
  name: measurements
spec:
  type: ClusterIP
  ports:
    - port: 8003
      targetPort: 8003
  selector:
    app: measurements
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: measurements
  namespace: default
  labels:
    app: measurements
spec:
  replicas: 1
  selector:
    matchLabels:
      app: measurements
  template:
    metadata:
      labels:
        app: measurements
        service: measurements
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "measurements-postgres:5432,rabbitmq:5672"
    spec:
      serviceAccountName: measurements
      containers:
        - name: measurements
          image: "opielapatryk/measurements:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8003
          command: ["sh", "-c"]
          args:
            - "python src/manage.py makemigrations && python src/manage.py migrate && python src/manage.py populate_measurements && python src/manage.py runserver 8003"
